Added models.py, config.py and build_database. Updated everything else (Part 2)
