# models.py
@@ -1,0 +1,20 @@
+# Here we're gonna provida the Person and PersonSchema classes
+# (serializing and deserializing)
+
+from datetime import datetime
+from config import db, ma
+
+
+class Person(db.Model):
+    __tablename__ = 'person'
+    person_id = db.Column(db.Integer, primary_key=True)
+    lname = db.Column(db.String(32), index=True)
+    fname = db.Column(db.String(32))
+    timestamp = db.Column(db.DateTime, default=datetime.utcnow, onupdate=datetime.utcnow)
+
+
+class PersonSchema(ma.ModelSchema):
+    class Meta:
+        model = Person
+        sqla_session = db.session
+
